<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="workshop.com.br.example.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/distanciaTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="Distância" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:text="Milhas: " />

            <EditText
                android:id="@+id/milhasEditText"
                android:layout_width="120px"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

            <Button
                android:id="@+id/milhasButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Converter"
                android:onClick="onMilhasButtonClick"/>

            <TextView
                android:id="@+id/quilometrosTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="0.00 Km" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#000">
        </View>

        <TextView
            android:id="@+id/massaTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="Massa" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:text="Libras: " />

            <EditText
                android:id="@+id/librasEditText"
                android:layout_width="120px"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

            <Button
                android:id="@+id/librasButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Converter"
                android:onClick="onLibrasButtonClick"/>

            <TextView
                android:id="@+id/quilosTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="0.00 Kg" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#000">
        </View>
        <TextView
            android:id="@+id/moedaTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="Moeda" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:text="Dolar: " />

            <EditText
                android:id="@+id/dolarEditText"
                android:layout_width="120px"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

            <Button
                android:id="@+id/dolarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Converter"
                android:onClick="onDolarButtonClick"/>

            <TextView
                android:id="@+id/realTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="R$ 0.00" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#000">
        </View>
        /*Temperatura */
        <TextView
            android:id="@+id/temperaturaTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="Temperatura" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:text="ºC: " />

            <EditText
                android:id="@+id/celsiusEditText"
                android:layout_width="120px"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"/>

            <Button
                android:id="@+id/celsiusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Converter"
                android:onClick="onCelsiusButtonClick"/>

            <TextView
                android:id="@+id/fahrenheitTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="0.00 ºF" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#000">
        </View>

        <Button
            android:id="@+id/limparButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="limpar"
            android:onClick="onLimparButtonClick"/>

    </LinearLayout>

</RelativeLayout>
